# onchain-trading

./: .env.example  .gitignore  README.md  docker-compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/rabbitmq-consumer/: package.json
apps/rabbitmq-consumer/src/: env.ts  index.ts
apps/rabbitmq-consumer/src/handlers/: pumpfun.ts  raydium.ts  unsiwap-v2.ts
apps/solana-indexer/: .env.example  Cargo.toml  README.md  build.rs  package.json
apps/solana-indexer/solana-indexer/: .gitignore  Cargo.toml
apps/solana-indexer/solana-indexer/src/: main.rs
apps/solana-indexer/src/: config.rs  datasources.rs  health.rs  main.rs  messaging.rs
apps/solana-indexer/src/config/: mod.rs
apps/solana-indexer/src/messaging/: mod.rs
apps/solana-indexer/src/models/: mod.rs
apps/solana-indexer/src/processors/: mod.rs  pumpfun.rs  raydium.rs  raydium_processor.rs
apps/uniswap-v2/: env.ts  package.json  ponder.config.ts  tsconfig.json
apps/uniswap-v2/src/: index.ts  rabbitmq-context.ts
apps/uniswap-v2/src/abis/: UniswapV2FacotryAbi.ts  UniswapV2PairAbi.ts
apps/uniswap-v2/src/api/: index.ts
tooling/eslint/: package.json
tooling/prettier/: index.js  package.json  tsconfig.json
tooling/tailwind/: eslint.config.js  package.json
tooling/typescript/: package.json
turbo/generators/: config.ts
turbo/generators/templates/: eslint.config.js.hbs  package.json.hbs  tsconfig.json.hbs
