[package]
name = "solana-indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
# Carbon core framework
carbon-core = "0.9"
carbon-rpc-block-subscribe-datasource = "0.9"
carbon-yellowstone-grpc-datasource = "0.9"
carbon-raydium-amm-v4-decoder = "0.9"
carbon-prometheus-metrics = "0.9"
# Async runtime
solana-sdk = "2.0"
solana-client = "2.0"

tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
# Solana SDK
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "1.5"

# Serialization
solana-transaction-status = "2.0"
# Message queue
lapin = "2.5"
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Logging and monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
# Environment and configuration
dotenvy = "0.15"
config = "0.14"
# Database (optional for local caching)
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
], optional = true }
# Time handling
chrono = { version = "0.4", features = ["serde"] }
# HTTP server for health checks
axum = "0.7"
tower = "0.5"
# Utilities
bytes = "1.7"
uuid = { version = "1.10", features = ["v4", "serde"] }

[features]
default = ["production"]
development = []
production = ["yellowstone"]
yellowstone = []
database = ["sqlx"]
